<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/id0"
        android:checkableBehavior="none">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_text" />
    </group>
    <group
        android:id="@+id/id1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_user_icon"
            android:title="@string/my_profile" />
    </group>

    <group
        android:id="@+id/id2"
        android:checkableBehavior="none"
        >
        <item
            android:id="@+id/previous_complains"
            android:icon="@drawable/ic_complaints_history_icon"
            android:title="@string/previous_complains" />
    </group>
    <group
        android:id="@+id/id3"
        android:checkableBehavior="none">
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_news_icon"
            android:title="@string/news" />
    </group>
    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/survey"
            android:icon="@drawable/ic_survey"
            android:title="@string/survey" />
    </group>
    <group
        android:id="@+id/id4"
        android:checkableBehavior="none">
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help_icon"
            android:title="@string/help" />
    </group>
    <group
        android:id="@+id/id6"
        android:checkableBehavior="none">
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about_company_icon"
            android:title="@string/about_us" />
    </group>
    <group
        android:id="@+id/id5"
        android:checkableBehavior="none">
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_baseline_call_24px"
            android:title="@string/contact_us" />
    </group>
    <group
       android:id="@+id/lang8">
        <item
            android:id="@+id/language"
            android:title="@string/language_settings"
            android:icon="@drawable/ic_language"
            >
        </item>
    </group>
    <group
        android:visible="false"
        android:id="@+id/id7"
        android:checkableBehavior="none">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_icon"
            android:title="@string/logout" />
    </group>
    <group
        android:id="@+id/id8"
        android:checkableBehavior="none">
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_login_icon"
            android:title="@string/login" />
    </group>
</menu>
