<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity"
    >

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cl_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/color_app_bar_background"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/home_color1"
                    android:textSize="@dimen/xl_text_size" />

                <ImageView
                    android:id="@+id/logo_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/logo_png_ar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end">

                    <Button
                        android:id="@+id/register_btn"
                        android:layout_width="70dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:padding="0dp"
                        android:text="@string/register"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="12dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/lin_user"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_menu_gallery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="@color/colorAccent"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/notification_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center|bottom"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/notification_img"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_margin="0dp"
                            android:layout_marginTop="4dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_menu_notification"
                            android:visibility="visible" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="0dp"
                            android:text="@string/notifications"
                            android:textColor="@color/color_button_normal"
                            android:textSize="@dimen/small_text_size" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        app:itemTextColor="@color/color_side_menu_text"
        app:itemIconTint="@color/color_side_menu_icons"
        android:foregroundTint="@color/color_app_bar_background"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/nav_view_background_color"
        app:menu="@menu/activity_base_drawer" />



</android.support.v4.widget.DrawerLayout>